--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -1,10 +1,11 @@
 /* BEGIN Regular */
 @font-face {
   font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+
   src: url("fonts/Roboto-Regular.eot?v=0.4.2");
   src: url("fonts/Roboto-Regular.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("fonts/Roboto-Regular.woff?v=0.4.2") format("woff"), url("fonts/Roboto-Regular.ttf?v=0.4.2") format("truetype"), url("fonts/Roboto-Regular.svg?v=0.4.2") format("svg");
-  font-weight: normal;
-  font-style: normal;
 }
 
 /* END Regular */
@@ -12,34 +13,41 @@
 /* BEGIN Bold */
 @font-face {
   font-family: 'RobotoBold';
+  font-style: normal;
+  font-weight: normal;
+
   src: url("fonts/Roboto-Bold.eot?v=0.4.2");
   src: url("fonts/Roboto-Bold.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("fonts/Roboto-Bold.woff?v=0.4.2") format("woff"), url("fonts/Roboto-Bold.ttf?v=0.4.2") format("truetype"), url("fonts/Roboto-Bold.svg?v=0.4.2") format("svg");
-  font-weight: normal;
-  font-style: normal;
 }
 
 /* END Bold */
 
 body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: $grey;
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
 }
 
 iframe {
-  vertical-align: top;
-  margin-left: 10px;
   margin-top: 2px;
+  margin-left: 10px;
+  vertical-align: top;
 }
 
 .add {
+  display: inline-block;
+  margin-top: 17px;
   margin-left: 10px;
   font-weight: bold;
   color: $teal;
   vertical-align: top;
-  margin-top: 17px;
+}
+
+strong {
   display: inline-block;
+  margin-bottom: 5px;
+  font-size: 1.2em;
 }
 
 .add:hover {
@@ -47,7 +55,7 @@ iframe {
 }
 
 .add i {
-  font-size: 0.9em;
+  font-size: .9em;
 }
 
 ul {
@@ -55,44 +63,45 @@ ul {
 }
 
 h2 {
-  cursor: pointer;
   display: inline-block;
-  margin-bottom: 0;
+  min-width: 50px;
   max-width: 85%;
+  margin-bottom: 0;
+  font-family: "RobotoBold";
   font-size: 1.3em;
   line-height: 1em;
-  min-width: 50px;
-  font-family: "RobotoBold";
+  cursor: pointer;
 }
 
 .controls {
-  font-size: 0.9em;
-  margin: 0;
   position: relative;
   top: -2px;
   left: -5px;
+  margin: 0;
+  font-size: .9em;
 }
 
 .container {
-  width: 100%;
-  -ms-box-orient: horizontal;
   display: -webkit-box;
-  display: -moz-box;
+  display:    -moz-box;
   display: -ms-flexbox;
-  display: -moz-flex;
+  display:    -moz-flex;
   display: -webkit-flex;
-  display: flex;
+  display:         flex;
+  width: 100%;
+
+  -ms-box-orient: horizontal;
 }
 
 .success-button {
+  width: 50px;
+  height: 24px;
+  padding: 0;
   margin-top: 5px;
   margin-left: 0;
-  height: 24px;
-  padding: 0px;
-  outline: none;
-  width: 50px;
-  background: $green;
   vertical-align: top;
+  background: $green;
+  outline: none;
 }
 
 .column-header {
@@ -100,21 +109,21 @@ h2 {
 }
 
 .editing-column {
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
 }
 
 .editing-column input {
-  color: $dark-gray;
-  font-weight: bold;
-  font-size: 1.3em;
   max-width: 300px;
+  font-size: 1.3em;
+  font-weight: bold;
+  color: $dark-gray;
 }
 
 .editing-column .blue {
-  font-size: 0.9em;
-  margin-left: 5px;
   position: relative;
   top: 7px;
+  margin-left: 5px;
+  font-size: .9em;
 }
 
 ul {
@@ -123,19 +132,19 @@ ul {
 
 #board-context {
   height: 36px;
+  padding-left: 14px;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   color: $grey;
   border: none;
-  padding-left: 14px;
   outline: none;
 }
 
 .delete {
+  display: inline-block;
+  margin-top: 19px;
   color: $red;
   vertical-align: top;
-  margin-top: 19px;
-  display: inline-block;
 }
 
 .delete:hover {
@@ -147,7 +156,7 @@ ul {
 }
 
 .editing .fa-times {
-  font-size: 0.9em;
+  font-size: .9em;
 }
 
 .fa-thumbs-o-up:hover:before {
@@ -168,7 +177,7 @@ ul {
 
 .fa-pencil:hover {
   color: $darkest-gray;
-  opacity: 0.5;
+  opacity: .5;
 }
 
 .message-body a.delete-link {
@@ -183,10 +192,10 @@ ul {
 }
 
 a {
+  font-size: 1.2em;
+  color: white;
   text-decoration: none;
   cursor: pointer;
-  color: white;
-  font-size: 1.2em;
 }
 
 img {
@@ -194,36 +203,42 @@ img {
 }
 
 small {
-  color: $lightest-gray;
   margin-left: 1em;
   font-size: .8em;
+  color: $lightest-gray;
 }
 
 h1 {
-  margin-left: 1.5em;
   margin-top: 2em;
+  margin-left: 1.5em;
 }
 
 input {
+  width: 100%;
+  padding: 3px 5px;
   background: white;
   border: 1px solid $lightest-gray;
   border-radius: 2px;
-  padding: 3px 5px;
-  width: 100%;
 }
 
 input[type="text"] {
-  font-size: 18px;
   width: 200px;
+  font-size: 18px;
 }
 
 .ngdialog-content h1 {
   margin: 0;
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
 }
 
 .ngdialog-content {
   width: 350px !important;
+}
+
+.ngdialog.bigDialog {
+  .ngdialog-content {
+    width: 700px !important;
+  }
 }
 
 .delete-button {
@@ -231,16 +246,16 @@ input[type="text"] {
 }
 
 blockquote {
+  margin: 0;
   font-family: 'PT Serif', serif;
   font-style: italic;
-  margin: 0;
 
   p {
     position: relative;
-    margin: 0 auto;
     padding: 5px 0;
-    font-style: italic;
+    margin: 0 auto;
     font-size: 14px;
+    font-style: italic;
     line-height: 20px;
   }
 
@@ -262,76 +277,73 @@ blockquote {
 }
 
 [draggable] {
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
   cursor: move;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+
+   -khtml-user-select: none;
 }
 
 .feature-notification {
-  width: 660px;
-  height: 530px;
-  position: fixed;
-  text-align: center;
-  top: 50px;
-  left: 22%;
-  background: white;
-  padding: 30px;
-  color: white;
-  font-size: 18px;
-
   @include media-query($tablet) {
+    left: 0;
     width: 100%;
     height: auto;
     box-sizing: border-box;
-    left: 0;
     overflow-y: scroll;
   }
-
   @include media-query($phone) {
-    height: 100vh;
     top: 0;
+    height: 100vh;
   }
+  position: fixed;
+  top: 50px;
+  left: 22%;
+  width: 660px;
+  height: 530px;
+  padding: 30px;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  background: white;
 
   .feature {
-    display: inline-block;
-    width: 48%;
-    margin-top: 20px;
-
     @include media-query($phone) {
       display: block;
       width: 100%;
     }
+    display: inline-block;
+    width: 48%;
+    margin-top: 20px;
   }
 
   .title {
-    font-size: 1.8em;
-    font-weight: bold;
-    color: $light-purple;
-    display: inline-block;
-
     @include media-query($phone) {
       font-size: 1.5em;
     }
+    display: inline-block;
+    font-size: 1.8em;
+    font-weight: bold;
+    color: $light-purple;
   }
 
   button {
-    margin: 0 auto;
     display: block;
     width: 120px;
-    font-size: 16px;
     height: 37px;
+    margin: 0 auto;
     margin-top: 25px;
+    font-size: 16px;
+    text-transform: uppercase;
     background: $purple;
     border-bottom: 3px solid $light-purple;
-    text-transform: uppercase;
   }
 
   h3 {
-    font-size: 1.2em;
     margin: 0;
     margin-bottom: 20px;
+    font-size: 1.2em;
     color: $dark-gray;
   }
 
@@ -341,23 +353,22 @@ blockquote {
   }
 
   a {
-    text-decoration: underline;
-    color: $yellow;
     font-size: 1.2em;
+    color: $yellow;
+    text-decoration: underline;
   }
 
   i {
+    @include media-query($phone) {
+      padding-bottom: 15px;
+      padding-left: 15px;
+      font-size: 1.5em;
+    }
     position: absolute;
     top: 5px;
     right: 5px;
     color: $dark-gray;
     cursor: pointer;
-
-    @include media-query($phone) {
-      font-size: 1.5em;
-      padding-left: 15px;
-      padding-bottom: 15px;
-    }
   }
 }
 
