--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -11,66 +11,67 @@
 
 .message-list {
   margin-left: 15px;
-  flex-grow: 1;
   flex-basis: 0;
- 
+
+  flex-grow: 1;
+
   &:last-child {
-    margin-right: 15px; 
+    margin-right: 15px;
   }
 }
 
 .text {
-  white-space: pre-line; 
-  word-break: break-word; 
   padding-right: 15px;
+  word-break: break-word;
+  white-space: pre-line;
 }
 
 .message-body {
-  padding: 0.5em;
- 
+  padding: .5em;
+
   a {
     position: absolute;
-    right: 0.5em;
-    top: 0.4em;
+    top: .4em;
+    right: .5em;
   }
 }
 
 .votes {
   @include position(absolute, null 0 0 null);
   display: block;
-  font-size: 0.89em;
-  text-align: right;
-  padding: .3em .4em;
   height: 17px;
+  padding: .3em .4em;
+  font-size: .89em;
+  text-align: right;
 }
 
 .placeholder {
-  visibility: hidden;
   width: 100%;
-  white-space: pre-line; 
-  word-break: break-word; 
   color: white;
+  word-break: break-word;
+  white-space: pre-line;
+  visibility: hidden;
 }
 
 .message {
   @include transform-style(preserve-3d);
-  @include transition(top 0.3s ease-in-out);
+  @include transition(top .3s ease-in-out);
   @include perspective(500);
-  background: transparent;
   display: block;
   height: auto;
-  margin-bottom: 29px;
-  border-radius: 2px;
   padding-bottom: 20px;
+  margin-bottom: 29px;
+  background: transparent;
+  border-radius: 2px;
 
   textarea {
     @include size(100% 100%);
+    padding: .3em .5em;
+    padding-bottom: 0;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    padding: 0.3em 0.5em;
-    padding-bottom: 0;
-    border: none;
     resize: none;
+    border: none;
     outline: none;
   }
 }
@@ -80,14 +81,14 @@
   @include transform(rotateX(0deg) rotateY(0deg));
   @include transform-style(preserve-3d);
   @include backface-visibility(hidden);
-  @include position(absolute, 0 null null 0); 
+  @include position(absolute, 0 null null 0);
   @include size(100% 100%);
   z-index: 900;
   padding-bottom: 1em;
   color: white;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
 }
 
 .message .back {
@@ -95,28 +96,28 @@
   @include transition(all .4s ease-in-out);
   @include backface-visibility(hidden);
   @include transform(rotateY(-180deg));
-  @include position(absolute, 0 null null 0); 
+  @include position(absolute, 0 null null 0);
   @include size(100% 100%);
   z-index: 800;
   padding-bottom: 1em;
   color: white;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+          box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
 }
 
 .message.flip .front {
   z-index: 900;
   -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+     -moz-transform: rotateY(180deg);
+          transform: rotateY(180deg);
 }
 
 .message.flip .back {
   z-index: 1000;
   -webkit-transform: rotateX(0deg) rotateY(0deg);
-  -moz-transform: rotateX(0deg) rotateY(0deg);
-  transform: rotateX(0deg) rotateY(0deg);
+     -moz-transform: rotateX(0deg) rotateY(0deg);
+          transform: rotateX(0deg) rotateY(0deg);
 }
 
 .message.flip .back button {
@@ -128,23 +129,39 @@
 }
 
 @keyframes hide {
-  0% { opacity: 1; }
-  33% { opacity: 1; }
-  66% { opacity: 0; }
-  100% { opacity: 0; }
+  0% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes show {
-  0% { opacity: 0; }
-  33% { opacity: 0; }
-  66% { opacity: 1; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  33% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .back a {
-  color: #EF5350;
+  color: #ef5350;
 
   &:hover {
-    color: #C33B38;
+    color: #c33b38;
   }
 }
