--- a/stylesheets/_base.scss
+++ b/stylesheets/_base.scss
@@ -4,8 +4,8 @@
   font-style: normal;
   font-weight: normal;
 
-  src: url("fonts/Roboto-Regular.eot?v=0.4.2");
-  src: url("fonts/Roboto-Regular.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("fonts/Roboto-Regular.woff?v=0.4.2") format("woff"), url("fonts/Roboto-Regular.ttf?v=0.4.2") format("truetype"), url("fonts/Roboto-Regular.svg?v=0.4.2") format("svg");
+  src: url("../fonts/Roboto-Regular.eot?v=0.4.2");
+  src: url("../fonts/Roboto-Regular.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("../fonts/Roboto-Regular.woff?v=0.4.2") format("woff"), url("../fonts/Roboto-Regular.ttf?v=0.4.2") format("truetype"), url("../fonts/Roboto-Regular.svg?v=0.4.2") format("svg");
 }
 
 /* END Regular */
@@ -16,8 +16,8 @@
   font-style: normal;
   font-weight: normal;
 
-  src: url("fonts/Roboto-Bold.eot?v=0.4.2");
-  src: url("fonts/Roboto-Bold.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("fonts/Roboto-Bold.woff?v=0.4.2") format("woff"), url("fonts/Roboto-Bold.ttf?v=0.4.2") format("truetype"), url("fonts/Roboto-Bold.svg?v=0.4.2") format("svg");
+  src: url("../fonts/Roboto-Bold.eot?v=0.4.2");
+  src: url("../fonts/Roboto-Bold.eot?#iefix&v=0.4.2") format("embedded-opentype"), url("../fonts/Roboto-Bold.woff?v=0.4.2") format("woff"), url("../fonts/Roboto-Bold.ttf?v=0.4.2") format("truetype"), url("../fonts/Roboto-Bold.svg?v=0.4.2") format("svg");
 }
 
 /* END Bold */
